# OscLib

./: .gitignore  CMakeLists.txt  EarthModel.cxx  IOscCalc.cxx  IOscCalc.h  IOscCalculator.cxx  IOscCalculator.h  Makefile  OscCalc.cxx  OscCalc.h  OscCalcCPT.cxx  OscCalcCPT.h  OscCalcDMP.cxx  OscCalcDMP.h  OscCalcDumb.h  OscCalcGeneral.cxx  OscCalcGeneral.h  OscCalcPMNS.cxx  OscCalcPMNS.h  OscCalcPMNSOpt.cxx  OscCalcPMNSOpt.h  OscCalcPMNSOptEigen.h  OscCalcPMNS_CPT.cxx  OscCalcPMNS_CPT.h  OscCalcPMNS_NSI.cxx  OscCalcPMNS_NSI.h  OscCalcSterile.cxx  OscCalcSterile.h  OscCalcSterileBeam.cxx  OscCalculator.h  OscCalculatorCPT.h  OscCalculatorDMP.cxx  OscCalculatorDMP.h  OscCalculatorGeneral.cxx  OscCalculatorGeneral.h  OscCalculatorPMNS.cxx  OscCalculatorPMNS.h  OscCalculatorPMNSOpt.cxx  OscCalculatorPMNSOpt.h  OscCalculatorPMNSOptEigen.cxx  (+12 more)
MatrixDecomp/: zhetrd3.h
OscLib/: CMakeLists.txt  Cache.h  Constants.h  IOscCalc.cxx  IOscCalc.h  IOscCalc.txx  IOscCalcDecay.cxx  IOscCalcDecay.h  IOscCalcSterile.cxx  IOscCalcSterile.h  Makefile  OscCalc.cxx  OscCalcAnalytic.cxx  OscCalcAnalytic.h  OscCalcCPT.cxx  OscCalcCPT.h  OscCalcDMP.cxx  OscCalcDMP.h  OscCalcDecayEigen.cxx  OscCalcDecayEigen.h  OscCalcDumb.cxx  OscCalcDumb.h  OscCalcGeneral.cxx  OscCalcGeneral.h  OscCalcNuFast.cxx  OscCalcNuFast.h  OscCalcNuFastDumb.cxx  OscCalcNuFastDumb.h  OscCalcPMNS.cxx  OscCalcPMNSOpt.cxx  OscCalcPMNSOpt.h  OscCalcPMNSOptEigen.cxx  OscCalcPMNSOptEigen.h  OscCalcPMNS_CPT.cxx  OscCalcPMNS_NSI.cxx  OscCalcPMNS_NSI.h  OscCalcSterile.cxx  OscCalcSterile.h  OscCalcSterileBeam.cxx  OscCalcSterileBeam.h  (+16 more)
OscLib/MatrixDecomp/: zheevc3.h  zheevh3.h  zheevq3.h
OscLib/test/: Makefile  testOsc.cc  testOscRndm.cc  testOscVec.cc  testSterile.cc
OscLib/ups/: osclib.table
cmake/: Findstan_math.cmake
cmake/Modules/: FindSundials.cmake  FindTBB.cmake  Findstan_math.cmake
jenkins/: dependencies.sh  jenkins_build.sh  jenkins_collect.sh  make_table.sh
jenkins/version/: Linux64bit+2.6-2.12_debug_e17_stan  Linux64bit+2.6-2.12_debug_e17_stanfree  Linux64bit+2.6-2.12_debug_e19_stan  Linux64bit+2.6-2.12_debug_e19_stanfree  Linux64bit+2.6-2.12_prof_e17_stan  Linux64bit+2.6-2.12_prof_e17_stanfree  Linux64bit+2.6-2.12_prof_e19_stan  Linux64bit+2.6-2.12_prof_e19_stanfree  Linux64bit+3.10-2.17_c14_n319_stan  Linux64bit+3.10-2.17_c14_n319_stanfree  Linux64bit+3.10-2.17_c14_n319_stanthread  Linux64bit+3.10-2.17_debug_c14_n316_stan  Linux64bit+3.10-2.17_debug_c14_n316_stanfree  Linux64bit+3.10-2.17_debug_c7_n309_stan  Linux64bit+3.10-2.17_debug_c7_n309_stanfree  Linux64bit+3.10-2.17_debug_c7_n311_stan  Linux64bit+3.10-2.17_debug_c7_n311_stanfree  Linux64bit+3.10-2.17_debug_c7_n313_stan  Linux64bit+3.10-2.17_debug_c7_n313_stanfree  Linux64bit+3.10-2.17_debug_c7_n315_stan  Linux64bit+3.10-2.17_debug_c7_n315_stanfree  Linux64bit+3.10-2.17_debug_c7_stan  Linux64bit+3.10-2.17_debug_c7_stanfree  Linux64bit+3.10-2.17_debug_e17_stan  Linux64bit+3.10-2.17_debug_e17_stanfree  Linux64bit+3.10-2.17_debug_e19_n308_stan  Linux64bit+3.10-2.17_debug_e19_n308_stanfree  Linux64bit+3.10-2.17_debug_e19_n309_stan  Linux64bit+3.10-2.17_debug_e19_n309_stanfree  Linux64bit+3.10-2.17_debug_e19_stan  Linux64bit+3.10-2.17_debug_e19_stanfree  Linux64bit+3.10-2.17_debug_e20_n309_stan  Linux64bit+3.10-2.17_debug_e20_n309_stanfree  Linux64bit+3.10-2.17_debug_e20_n311_stan  Linux64bit+3.10-2.17_debug_e20_n311_stanfree  Linux64bit+3.10-2.17_debug_e20_n313_stan  Linux64bit+3.10-2.17_debug_e20_n313_stanfree  Linux64bit+3.10-2.17_debug_e20_n315_stan  Linux64bit+3.10-2.17_debug_e20_n315_stanfree  Linux64bit+3.10-2.17_debug_e20_stan  (+44 more)
test/: Makefile  testOsc.cc  testOscRndm.cc  testSterile.cc
